# yclass

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  index.html  package.json  run_unix.sh  tailwind.config.js  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/src/: error.rs  eval.rs  interface.rs  lib.rs
example/: Cargo.toml  main.rs
examples/: subject.rs
src/: App.svelte  app.rs  class.rs  config.rs  context.rs  hotkeys.rs  main.rs  main.ts  models.ts  process.rs  project.rs  state.rs  style.css  thread_pool.rs  value.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  process_selector.rs  state.rs
src/field/: boolean.rs  float.rs  hex.rs  int.rs  kind.rs  mod.rs  pointer.rs  string_pointer.rs  utils.rs
src/generator/: cpp.rs  rust.rs
src/gui/: class_list.rs  generator.rs  inspector.rs  mod.rs  process_attach.rs  spider.rs  tool_bar.rs  utils.rs
src/gui/spider/: gui.rs  mod.rs  scanner.rs
src/lib/: ClassInspector.svelte  Greet.svelte  MainWindow.svelte  ProcessAttachModal.svelte  ProcessSelector.svelte  ProjectData.svelte  Toolbar.svelte  utils.ts
src/lib/fields/: UnknownField.svelte
subject/: Cargo.toml  main.rs
yclass/: Cargo.toml  build.rs
yclass-core/: Cargo.toml
yclass/examples/: subject.rs
yclass/src/: address.rs  app.rs  class.rs  config.rs  context.rs  main.rs  process.rs  project.rs  state.rs
yclass/src/field/: boolean.rs  float.rs  hex.rs  int.rs  kind.rs  mod.rs  pointer.rs  utils.rs
yclass/src/generator/: cpp.rs  mod.rs  rust.rs
yclass/src/gui/: class_list.rs  generator.rs  inspector.rs  mod.rs  process_attach.rs  tool_bar.rs
yclass_config/: Cargo.toml
yclass_config/src/: lib.rs
