[package]
name = "yclass"
version = "0.1.0"
edition = "2021"
description = "Inspect and recreate in-memory data structures"
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/yclass"
readme = "README.md"

[dependencies]
memflex = { version = "0.5", features = ["external"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
egui_extras = "0.21"
egui-notify = "0.6"
libloading = "0.7"
once_cell = "1.16"
fastrand = "1.8"
eframe = { path = "../egui/crates/eframe" }
rayon = "1.6"
toml = "0.5"
eyre = "0.6"
dirs = "4.0"
rfd = "0.10"
ron = "0.8"

[patch.crates-io.egui]
path = "../egui/crates/egui"
