[package]
name = "yclass"
version = "0.1.0"
description = "App to inspect and recreate in-memory data structures"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = "1.4."

[dependencies]
serde.workspace = true

tauri = { version = "1.4", features = ["shell-open"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
