[package]
name = "yclass"
version = "0.1.0"
edition = "2021"
description = "Inspect and recreate in-memory data structures"
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/yclass"

[dependencies]
memflex = { path = "../../memflex", features = ["external"] }
yclass_config = { path = "../yclass_config" }
egui-notify = "0.4"
eframe = "0.19"

[dev-dependencies]
fastrand = "1.8"
