[package]
name = "yclass"
version = "0.1.0"
edition = "2021"
description = "Inspect and recreate in-memory data structures"
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/yclass"

[dependencies]
memflex = { path = "../../memflex", features = ["external"] }
yclass_config = { path = "../yclass_config" }
egui-notify = "0.4"
fastrand = "1.8"
eframe = "0.19"
libloading = "0.7.4"
